# serializer version: 1
# name: test_emissions_output_snapshot[eq_scenario_10]
  '''
  timestamp,elec_Wh,gas_Wh,elec_emissions,gas_emissions,total_refrig_emissions,total_emissions
  2025-01-01 00:00:00,0.0,562500.0,0.0,134.55,895.7292,1030.2792
  2025-01-01 01:00:00,0.0,500000.0,0.0,119.6,895.7292,1015.3292
  2025-01-01 02:00:00,0.0,437500.0,0.0,104.65,895.7292,1000.3792
  2025-01-01 03:00:00,0.0,375000.0,0.0,89.7,895.7292,985.4292
  2025-01-01 04:00:00,0.0,312500.0,0.0,74.75,895.7292,970.4792
  2025-01-01 05:00:00,0.0,257500.0,0.0,61.594,895.7292,957.3232
  2025-01-01 06:00:00,0.0,187500.0,0.0,44.85,895.7292,940.5792
  2025-01-01 07:00:00,0.0,125000.0,0.0,29.9,895.7292,925.6292
  2025-01-01 08:00:00,12500.0,62500.0,7.5,14.95,895.7292,918.1792
  2025-01-01 09:00:00,25000.0,0.0,15.0,0.0,895.7292,910.7292
  2025-01-01 10:00:00,32500.0,0.0,19.5,0.0,895.7292,915.2292
  2025-01-01 11:00:00,37500.0,0.0,22.5,0.0,895.7292,918.2292
  2025-01-01 12:00:00,50000.0,0.0,30.0,0.0,895.7292,925.7292
  2025-01-01 13:00:00,52500.0,0.0,31.5,0.0,895.7292,927.2292
  2025-01-01 14:00:00,62500.0,0.0,37.5,0.0,895.7292,933.2292
  2025-01-01 15:00:00,75000.0,0.0,45.0,0.0,895.7292,940.7292
  2025-01-01 16:00:00,0.0,437500.0,0.0,104.65,895.7292,1000.3792
  2025-01-01 17:00:00,0.0,375000.0,0.0,89.7,895.7292,985.4292
  2025-01-01 18:00:00,0.0,312500.0,0.0,74.75,895.7292,970.4792
  2025-01-01 19:00:00,0.0,250000.0,0.0,59.8,895.7292,955.5292
  2025-01-01 20:00:00,0.0,187500.0,0.0,44.85,895.7292,940.5792
  2025-01-01 21:00:00,0.0,125000.0,0.0,29.9,895.7292,925.6292
  2025-01-01 22:00:00,12500.0,62500.0,7.5,14.95,895.7292,918.1792
  2025-01-01 23:00:00,25000.0,0.0,15.0,0.0,895.7292,910.7292
  
  '''
# ---
# name: test_emissions_output_snapshot[eq_scenario_18]
  '''
  timestamp,elec_Wh,gas_Wh,elec_emissions,gas_emissions,total_refrig_emissions,total_emissions
  2025-01-01 00:00:00,0.0,500000.0,0.0,119.6,209.7,329.3
  2025-01-01 01:00:00,0.0,444444.4444,0.0,106.3111,209.7,316.0111
  2025-01-01 02:00:00,146935.3484,0.0,88.1612,0.0,209.7,297.8612
  2025-01-01 03:00:00,118585.445,0.0,71.1513,0.0,209.7,280.8513
  2025-01-01 04:00:00,90187.5902,0.0,54.1126,0.0,209.7,263.8126
  2025-01-01 05:00:00,66451.6129,0.0,39.871,0.0,209.7,249.571
  2025-01-01 06:00:00,41322.314,0.0,24.7934,0.0,209.7,234.4934
  2025-01-01 07:00:00,25906.7358,0.0,15.544,0.0,209.7,225.244
  2025-01-01 08:00:00,21930.7574,0.0,13.1585,0.0,209.7,222.8585
  2025-01-01 09:00:00,20000.0,0.0,12.0,0.0,209.7,221.7
  2025-01-01 10:00:00,28176.6459,0.0,16.906,0.0,209.7,226.606
  2025-01-01 11:00:00,34433.2855,0.0,20.66,0.0,209.7,230.36
  2025-01-01 12:00:00,53872.0539,0.0,32.3232,0.0,209.7,242.0232
  2025-01-01 13:00:00,57181.7563,0.0,34.3091,0.0,209.7,244.0091
  2025-01-01 14:00:00,71174.3772,0.0,42.7046,0.0,209.7,252.4046
  2025-01-01 15:00:00,90566.0377,0.0,54.3396,0.0,209.7,264.0396
  2025-01-01 16:00:00,146935.3484,0.0,88.1612,0.0,209.7,297.8612
  2025-01-01 17:00:00,118585.445,0.0,71.1513,0.0,209.7,280.8513
  2025-01-01 18:00:00,90187.5902,0.0,54.1126,0.0,209.7,263.8126
  2025-01-01 19:00:00,63355.5832,0.0,38.0133,0.0,209.7,247.7133
  2025-01-01 20:00:00,41322.314,0.0,24.7934,0.0,209.7,234.4934
  2025-01-01 21:00:00,25906.7358,0.0,15.544,0.0,209.7,225.244
  2025-01-01 22:00:00,21930.7574,0.0,13.1585,0.0,209.7,222.8585
  2025-01-01 23:00:00,20000.0,0.0,12.0,0.0,209.7,221.7
  
  '''
# ---
# name: test_emissions_output_snapshot[eq_scenario_3]
  '''
  timestamp,elec_Wh,gas_Wh,elec_emissions,gas_emissions,total_refrig_emissions,total_emissions
  2025-01-01 00:00:00,0.0,562500.0,0.0,134.55,956.8917,1091.4417
  2025-01-01 01:00:00,57488.3721,345500.0,34.493,82.6436,956.8917,1074.0283
  2025-01-01 02:00:00,62552.4769,251250.0,37.5315,60.099,956.8917,1054.5222
  2025-01-01 03:00:00,63118.5149,175401.7857,37.8711,41.9561,956.8917,1036.7189
  2025-01-01 04:00:00,63823.9538,91350.0,38.2944,21.8509,956.8917,1017.037
  2025-01-01 05:00:00,64580.6452,7250.0,38.7484,1.7342,956.8917,997.3743
  2025-01-01 06:00:00,41322.314,0.0,24.7934,0.0,956.8917,981.6851
  2025-01-01 07:00:00,25906.7358,0.0,15.544,0.0,956.8917,972.4357
  2025-01-01 08:00:00,21930.7574,0.0,13.1585,0.0,956.8917,970.0501
  2025-01-01 09:00:00,20000.0,0.0,12.0,0.0,956.8917,968.8917
  2025-01-01 10:00:00,28176.6459,0.0,16.906,0.0,956.8917,973.7977
  2025-01-01 11:00:00,34433.2855,0.0,20.66,0.0,956.8917,977.5516
  2025-01-01 12:00:00,53872.0539,0.0,32.3232,0.0,956.8917,989.2149
  2025-01-01 13:00:00,57181.7563,0.0,34.3091,0.0,956.8917,991.2007
  2025-01-01 14:00:00,70831.7393,0.0,42.499,0.0,956.8917,999.3907
  2025-01-01 15:00:00,86869.1038,0.0,52.1215,0.0,956.8917,1009.0131
  2025-01-01 16:00:00,62552.4769,251250.0,37.5315,60.099,956.8917,1054.5222
  2025-01-01 17:00:00,63118.5149,175401.7857,37.8711,41.9561,956.8917,1036.7189
  2025-01-01 18:00:00,63823.9538,91350.0,38.2944,21.8509,956.8917,1017.037
  2025-01-01 19:00:00,63355.5832,0.0,38.0133,0.0,956.8917,994.905
  2025-01-01 20:00:00,41322.314,0.0,24.7934,0.0,956.8917,981.6851
  2025-01-01 21:00:00,25906.7358,0.0,15.544,0.0,956.8917,972.4357
  2025-01-01 22:00:00,21930.7574,0.0,13.1585,0.0,956.8917,970.0501
  2025-01-01 23:00:00,20000.0,0.0,12.0,0.0,956.8917,968.8917
  
  '''
# ---
# name: test_emissions_output_snapshot[eq_scenario_4]
  '''
  timestamp,elec_Wh,gas_Wh,elec_emissions,gas_emissions,total_refrig_emissions,total_emissions
  2025-01-01 00:00:00,450000.0,0.0,270.0,0.0,209.7,479.7
  2025-01-01 01:00:00,201665.1163,0.0,120.9991,0.0,209.7,330.6991
  2025-01-01 02:00:00,146935.3484,0.0,88.1612,0.0,209.7,297.8612
  2025-01-01 03:00:00,118585.445,0.0,71.1513,0.0,209.7,280.8513
  2025-01-01 04:00:00,90187.5902,0.0,54.1126,0.0,209.7,263.8126
  2025-01-01 05:00:00,66451.6129,0.0,39.871,0.0,209.7,249.571
  2025-01-01 06:00:00,41322.314,0.0,24.7934,0.0,209.7,234.4934
  2025-01-01 07:00:00,25906.7358,0.0,15.544,0.0,209.7,225.244
  2025-01-01 08:00:00,21930.7574,0.0,13.1585,0.0,209.7,222.8585
  2025-01-01 09:00:00,20000.0,0.0,12.0,0.0,209.7,221.7
  2025-01-01 10:00:00,28176.6459,0.0,16.906,0.0,209.7,226.606
  2025-01-01 11:00:00,34433.2855,0.0,20.66,0.0,209.7,230.36
  2025-01-01 12:00:00,53872.0539,0.0,32.3232,0.0,209.7,242.0232
  2025-01-01 13:00:00,57181.7563,0.0,34.3091,0.0,209.7,244.0091
  2025-01-01 14:00:00,71174.3772,0.0,42.7046,0.0,209.7,252.4046
  2025-01-01 15:00:00,90566.0377,0.0,54.3396,0.0,209.7,264.0396
  2025-01-01 16:00:00,146935.3484,0.0,88.1612,0.0,209.7,297.8612
  2025-01-01 17:00:00,118585.445,0.0,71.1513,0.0,209.7,280.8513
  2025-01-01 18:00:00,90187.5902,0.0,54.1126,0.0,209.7,263.8126
  2025-01-01 19:00:00,63355.5832,0.0,38.0133,0.0,209.7,247.7133
  2025-01-01 20:00:00,41322.314,0.0,24.7934,0.0,209.7,234.4934
  2025-01-01 21:00:00,25906.7358,0.0,15.544,0.0,209.7,225.244
  2025-01-01 22:00:00,21930.7574,0.0,13.1585,0.0,209.7,222.8585
  2025-01-01 23:00:00,20000.0,0.0,12.0,0.0,209.7,221.7
  
  '''
# ---
# name: test_emissions_output_snapshot[eq_scenario_5]
  '''
  timestamp,elec_Wh,gas_Wh,elec_emissions,gas_emissions,total_refrig_emissions,total_emissions
  2025-01-01 00:00:00,450000.0,0.0,270.0,0.0,253.3875,523.3875
  2025-01-01 01:00:00,201665.1163,0.0,120.9991,0.0,253.3875,374.3866
  2025-01-01 02:00:00,146935.3484,0.0,88.1612,0.0,253.3875,341.5487
  2025-01-01 03:00:00,118585.445,0.0,71.1513,0.0,253.3875,324.5388
  2025-01-01 04:00:00,90187.5902,0.0,54.1126,0.0,253.3875,307.5001
  2025-01-01 05:00:00,66451.6129,0.0,39.871,0.0,253.3875,293.2585
  2025-01-01 06:00:00,41322.314,0.0,24.7934,0.0,253.3875,278.1809
  2025-01-01 07:00:00,25906.7358,0.0,15.544,0.0,253.3875,268.9315
  2025-01-01 08:00:00,21930.7574,0.0,13.1585,0.0,253.3875,266.546
  2025-01-01 09:00:00,20000.0,0.0,12.0,0.0,253.3875,265.3875
  2025-01-01 10:00:00,28176.6459,0.0,16.906,0.0,253.3875,270.2935
  2025-01-01 11:00:00,34433.2855,0.0,20.66,0.0,253.3875,274.0475
  2025-01-01 12:00:00,53872.0539,0.0,32.3232,0.0,253.3875,285.7107
  2025-01-01 13:00:00,57181.7563,0.0,34.3091,0.0,253.3875,287.6966
  2025-01-01 14:00:00,71174.3772,0.0,42.7046,0.0,253.3875,296.0921
  2025-01-01 15:00:00,90566.0377,0.0,54.3396,0.0,253.3875,307.7271
  2025-01-01 16:00:00,146935.3484,0.0,88.1612,0.0,253.3875,341.5487
  2025-01-01 17:00:00,118585.445,0.0,71.1513,0.0,253.3875,324.5388
  2025-01-01 18:00:00,90187.5902,0.0,54.1126,0.0,253.3875,307.5001
  2025-01-01 19:00:00,63355.5832,0.0,38.0133,0.0,253.3875,291.4008
  2025-01-01 20:00:00,41322.314,0.0,24.7934,0.0,253.3875,278.1809
  2025-01-01 21:00:00,25906.7358,0.0,15.544,0.0,253.3875,268.9315
  2025-01-01 22:00:00,21930.7574,0.0,13.1585,0.0,253.3875,266.546
  2025-01-01 23:00:00,20000.0,0.0,12.0,0.0,253.3875,265.3875
  
  '''
# ---
# name: test_scenario_output_snapshot[eq_scenario_10]
  '''
  timestamp,t_out_C,heating_W,cooling_W,elec_Wh,gas_Wh,hhw_W,chw_W,hr_hhw_W,hr_chw_W,hr_cop_h,max_cap_h_hr_W,min_cap_h_hr_W,simult_h_hr_W,elec_hr_Wh,hr_wwhp_refrigerant,hr_wwhp_refrigerant_weight_kg,hr_wwhp_refrigerant_gwp_kgCO2e_per_kgRefrig,awhp_num,awhp_num_redundant,awhp_cap_h_W,awhp_cop_h,awhp_hhw_W,elec_awhp_h_Wh,boiler_num,boiler_eff,boiler_hhw_W,boiler_hhw_W_ng_mode,boiler_eq_calc_type,boiler_cap_W,gas_boiler_Wh,gas_boiler_Wh_ng_mode,fuel_switching,res_hhw_W,elec_res_Wh,awhp_num_c,awhp_cap_c_W,awhp_cop_c,awhp_chw_W,elec_awhp_c_Wh,chiller_cop,chiller_chw_W,elec_chiller_Wh,chiller_refrigerant,chiller_refrigerant_weight_kg,chiller_refrigerant_gwp_kgCO2e_per_kgRefrig,eq_scen_id,eq_scen_name
  2025-01-01 00:00:00,-20.0,450000.0,0.0,0.0,562500.0,450000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,450000.0,,specific,190500.0,562500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 01:00:00,-15.0,400000.0,0.0,0.0,500000.0,400000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,400000.0,,specific,190500.0,500000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 02:00:00,-10.0,350000.0,0.0,0.0,437500.0,350000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,350000.0,,specific,190500.0,437500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 03:00:00,-5.0,300000.0,0.0,0.0,375000.0,300000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,300000.0,,specific,190500.0,375000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 04:00:00,0.0,250000.0,0.0,0.0,312500.0,250000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,250000.0,,specific,190500.0,312500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 05:00:00,4.4,206000.0,0.0,0.0,257500.0,206000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,206000.0,,specific,190500.0,257500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 06:00:00,10.0,150000.0,0.0,0.0,187500.0,150000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,150000.0,,specific,190500.0,187500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 07:00:00,15.0,100000.0,0.0,0.0,125000.0,100000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,100000.0,,specific,190500.0,125000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 08:00:00,20.0,50000.0,40000.0,12500.0,62500.0,50000.0,40000.0,0.0,0.0,4.2,211000.0,70000.0,50000.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,50000.0,,specific,190500.0,62500.0,,False,,,,,,,,3.2,40000.0,12500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 09:00:00,25.0,0.0,80000.0,25000.0,0.0,0.0,80000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,80000.0,25000.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 10:00:00,28.0,0.0,104000.0,32500.0,0.0,0.0,104000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,104000.0,32500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 11:00:00,30.0,0.0,120000.0,37500.0,0.0,0.0,120000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,120000.0,37500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 12:00:00,35.0,0.0,160000.0,50000.0,0.0,0.0,160000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,160000.0,50000.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 13:00:00,36.0,0.0,168000.0,52500.0,0.0,0.0,168000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,168000.0,52500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 14:00:00,40.0,0.0,200000.0,62500.0,0.0,0.0,200000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,200000.0,62500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 15:00:00,45.0,0.0,240000.0,75000.0,0.0,0.0,240000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,240000.0,75000.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 16:00:00,-10.0,350000.0,0.0,0.0,437500.0,350000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,350000.0,,specific,190500.0,437500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 17:00:00,-5.0,300000.0,0.0,0.0,375000.0,300000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,300000.0,,specific,190500.0,375000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 18:00:00,0.0,250000.0,0.0,0.0,312500.0,250000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,250000.0,,specific,190500.0,312500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 19:00:00,5.0,200000.0,0.0,0.0,250000.0,200000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,200000.0,,specific,190500.0,250000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 20:00:00,10.0,150000.0,0.0,0.0,187500.0,150000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,150000.0,,specific,190500.0,187500.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 21:00:00,15.0,100000.0,0.0,0.0,125000.0,100000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,100000.0,,specific,190500.0,125000.0,,False,,,,,,,,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 22:00:00,20.0,50000.0,40000.0,12500.0,62500.0,50000.0,40000.0,0.0,0.0,4.2,211000.0,70000.0,50000.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,50000.0,,specific,190500.0,62500.0,,False,,,,,,,,3.2,40000.0,12500.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  2025-01-01 23:00:00,25.0,0.0,80000.0,25000.0,0.0,0.0,80000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,,,,,,,,0.8,0.0,,specific,190500.0,0.0,,False,,,,,,,,3.2,80000.0,25000.0,R-134A,11.9167,17040.8333,eq_scenario_10,HR WWHP+Gas Boiler+AC Chiller
  
  '''
# ---
# name: test_scenario_output_snapshot[eq_scenario_3]
  '''
  timestamp,t_out_C,heating_W,cooling_W,elec_Wh,gas_Wh,hhw_W,chw_W,hr_hhw_W,hr_chw_W,hr_cop_h,elec_hr_Wh,awhp_num,awhp_num_redundant,awhp_cap_h_W,awhp_cop_h,awhp_hhw_W,elec_awhp_h_Wh,awhp_refrigerant,total_awhp_refrigerant_weight_kg,total_awhp_refrigerant_gwp_kgCO2e_per_kgRefrig,boiler_num,boiler_eff,boiler_hhw_W,boiler_hhw_W_ng_mode,boiler_eq_calc_type,boiler_cap_W,gas_boiler_Wh,gas_boiler_Wh_ng_mode,fuel_switching,res_hhw_W,elec_res_Wh,awhp_num_c,awhp_cap_c_W,awhp_cop_c,awhp_chw_W,elec_awhp_c_Wh,chiller_cop,chiller_chw_W,elec_chiller_Wh,chiller_refrigerant,chiller_refrigerant_weight_kg,chiller_refrigerant_gwp_kgCO2e_per_kgRefrig,eq_scen_id,eq_scen_name
  2025-01-01 00:00:00,-20.0,450000.0,0.0,0.0,562500.0,450000.0,0.0,,,,,1.0,2.0,0.0,2.15,0.0,0.0,R-454B,4.5,2097.0,,0.8,450000.0,,specific,190500.0,562500.0,,False,,,1.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 01:00:00,-15.0,400000.0,0.0,57488.3721,345500.0,400000.0,0.0,,,,,1.0,2.0,123600.0,2.15,123600.0,57488.3721,R-454B,4.5,2097.0,,0.8,276400.0,,specific,190500.0,345500.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 02:00:00,-10.0,350000.0,0.0,62552.4769,251250.0,350000.0,0.0,,,,,1.0,2.0,149000.0,2.382,149000.0,62552.4769,R-454B,4.5,2097.0,,0.8,201000.0,,specific,190500.0,251250.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 03:00:00,-5.0,300000.0,0.0,63118.5149,175401.7857,300000.0,0.0,,,,,1.0,2.0,159678.5714,2.5298,159678.5714,63118.5149,R-454B,4.5,2097.0,,0.8,140321.4286,,specific,190500.0,175401.7857,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 04:00:00,0.0,250000.0,0.0,63823.9538,91350.0,250000.0,0.0,,,,,1.0,2.0,176920.0,2.772,176920.0,63823.9538,R-454B,4.5,2097.0,,0.8,73080.0,,specific,190500.0,91350.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 05:00:00,4.4,206000.0,0.0,64580.6452,7250.0,206000.0,0.0,,,,,1.0,2.0,200200.0,3.1,200200.0,64580.6452,R-454B,4.5,2097.0,,0.8,5800.0,,specific,190500.0,7250.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 06:00:00,10.0,150000.0,0.0,41322.314,0.0,150000.0,0.0,,,,,1.0,2.0,235700.0,3.63,150000.0,41322.314,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 07:00:00,15.0,100000.0,0.0,25906.7358,0.0,100000.0,0.0,,,,,1.0,2.0,243100.0,3.86,100000.0,25906.7358,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.5,125000.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 08:00:00,20.0,50000.0,40000.0,21930.7574,0.0,50000.0,40000.0,,,,,1.0,2.0,257500.0,4.03,50000.0,12406.9479,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.5,117500.0,4.2,40000.0,9523.8095,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 09:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,,,,,1.0,2.0,266150.0,4.125,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,220000.0,4.0,80000.0,20000.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 10:00:00,28.0,0.0,104000.0,28176.6459,0.0,0.0,104000.0,,,,,1.0,2.0,271340.0,4.182,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,214360.0,3.691,104000.0,28176.6459,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 11:00:00,30.0,0.0,120000.0,34433.2855,0.0,0.0,120000.0,,,,,1.0,2.0,274800.0,4.22,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,210600.0,3.485,120000.0,34433.2855,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 12:00:00,35.0,0.0,160000.0,53872.0539,0.0,0.0,160000.0,,,,,1.0,2.0,274800.0,4.22,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,201200.0,2.97,160000.0,53872.0539,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 13:00:00,36.0,0.0,168000.0,57181.7563,0.0,0.0,168000.0,,,,,1.0,2.0,0.0,4.22,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,199380.0,2.938,168000.0,57181.7563,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 14:00:00,40.0,0.0,200000.0,70831.7393,0.0,0.0,200000.0,,,,,1.0,2.0,0.0,4.22,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,192100.0,2.81,192100.0,68362.9893,3.2,7900.0,2468.75,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 15:00:00,45.0,0.0,240000.0,86869.1038,0.0,0.0,240000.0,,,,,1.0,2.0,0.0,4.22,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,183000.0,2.65,183000.0,69056.6038,3.2,57000.0,17812.5,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 16:00:00,-10.0,350000.0,0.0,62552.4769,251250.0,350000.0,0.0,,,,,1.0,2.0,149000.0,2.382,149000.0,62552.4769,R-454B,4.5,2097.0,,0.8,201000.0,,specific,190500.0,251250.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 17:00:00,-5.0,300000.0,0.0,63118.5149,175401.7857,300000.0,0.0,,,,,1.0,2.0,159678.5714,2.5298,159678.5714,63118.5149,R-454B,4.5,2097.0,,0.8,140321.4286,,specific,190500.0,175401.7857,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 18:00:00,0.0,250000.0,0.0,63823.9538,91350.0,250000.0,0.0,,,,,1.0,2.0,176920.0,2.772,176920.0,63823.9538,R-454B,4.5,2097.0,,0.8,73080.0,,specific,190500.0,91350.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 19:00:00,5.0,200000.0,0.0,63355.5832,0.0,200000.0,0.0,,,,,1.0,2.0,204003.5714,3.1568,200000.0,63355.5832,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 20:00:00,10.0,150000.0,0.0,41322.314,0.0,150000.0,0.0,,,,,1.0,2.0,235700.0,3.63,150000.0,41322.314,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.0,0.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 21:00:00,15.0,100000.0,0.0,25906.7358,0.0,100000.0,0.0,,,,,1.0,2.0,243100.0,3.86,100000.0,25906.7358,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.5,125000.0,4.4,0.0,0.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 22:00:00,20.0,50000.0,40000.0,21930.7574,0.0,50000.0,40000.0,,,,,1.0,2.0,257500.0,4.03,50000.0,12406.9479,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,0.5,117500.0,4.2,40000.0,9523.8095,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  2025-01-01 23:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,,,,,1.0,2.0,266150.0,4.125,0.0,0.0,R-454B,4.5,2097.0,,0.8,0.0,,specific,190500.0,0.0,,False,,,1.0,220000.0,4.0,80000.0,20000.0,3.2,0.0,0.0,R-134A,11.9167,17040.8333,eq_scenario_3,20% AWHP (H+C)+Gas Backup
  
  '''
# ---
# name: test_scenario_output_snapshot[eq_scenario_4]
  '''
  timestamp,t_out_C,heating_W,cooling_W,elec_Wh,gas_Wh,hhw_W,chw_W,hr_hhw_W,hr_chw_W,hr_cop_h,elec_hr_Wh,awhp_num,awhp_num_redundant,awhp_cap_h_W,awhp_cop_h,awhp_hhw_W,elec_awhp_h_Wh,awhp_refrigerant,total_awhp_refrigerant_weight_kg,total_awhp_refrigerant_gwp_kgCO2e_per_kgRefrig,boiler_num,boiler_eff,boiler_hhw_W,boiler_hhw_W_ng_mode,boiler_eq_calc_type,boiler_cap_W,gas_boiler_Wh,gas_boiler_Wh_ng_mode,fuel_switching,res_hhw_W,elec_res_Wh,awhp_num_c,awhp_cap_c_W,awhp_cop_c,awhp_chw_W,elec_awhp_c_Wh,chiller_cop,chiller_chw_W,elec_chiller_Wh,eq_scen_id,eq_scen_name
  2025-01-01 00:00:00,-20.0,450000.0,0.0,450000.0,0.0,450000.0,0.0,,,,,3.0,4.0,0.0,2.15,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,450000.0,450000.0,3.0,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 01:00:00,-15.0,400000.0,0.0,201665.11627906977,0.0,400000.0,0.0,,,,,3.0,4.0,370800.0,2.15,370800.0,172465.11627906977,R-454B,9.0,4194.0,,,,,,,,,False,29200.0,29200.0,0.0,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 02:00:00,-10.0,350000.0,0.0,146935.34844668346,0.0,350000.0,0.0,,,,,3.0,4.0,447000.0,2.382,350000.0,146935.34844668346,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,0.5,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 03:00:00,-5.0,300000.0,0.0,118585.4450483518,0.0,300000.0,0.0,,,,,3.0,4.0,479035.71428571426,2.5298214285714287,300000.0,118585.4450483518,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.0,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 04:00:00,0.0,250000.0,0.0,90187.59018759019,0.0,250000.0,0.0,,,,,3.0,4.0,530760.0,2.772,250000.0,90187.59018759019,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 05:00:00,4.4,206000.0,0.0,66451.6129032258,0.0,206000.0,0.0,,,,,3.0,4.0,600600.0,3.1,206000.0,66451.6129032258,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 06:00:00,10.0,150000.0,0.0,41322.31404958678,0.0,150000.0,0.0,,,,,3.0,4.0,707100.0,3.63,150000.0,41322.31404958678,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 07:00:00,15.0,100000.0,0.0,25906.73575129534,0.0,100000.0,0.0,,,,,3.0,4.0,729300.0,3.86,100000.0,25906.73575129534,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,625000.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 08:00:00,20.0,50000.0,40000.0,21930.75741462838,0.0,50000.0,40000.0,,,,,3.0,4.0,772500.0,4.03,50000.0,12406.947890818858,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,587500.0,4.2,40000.0,9523.809523809523,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 09:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,,,,,3.0,4.0,798450.0,4.125,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,660000.0,4.0,80000.0,20000.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 10:00:00,28.0,0.0,104000.0,28176.645895421298,0.0,0.0,104000.0,,,,,3.0,4.0,814020.0,4.1819999999999995,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,643080.0,3.691,104000.0,28176.645895421298,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 11:00:00,30.0,0.0,120000.0,34433.28550932568,0.0,0.0,120000.0,,,,,3.0,4.0,824400.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,631800.0,3.4850000000000003,120000.0,34433.28550932568,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 12:00:00,35.0,0.0,160000.0,53872.05387205387,0.0,0.0,160000.0,,,,,3.0,4.0,824400.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,603600.0,2.97,160000.0,53872.05387205387,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 13:00:00,36.0,0.0,168000.0,57181.756296800544,0.0,0.0,168000.0,,,,,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,598140.0,2.938,168000.0,57181.756296800544,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 14:00:00,40.0,0.0,200000.0,71174.37722419928,0.0,0.0,200000.0,,,,,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,576300.0,2.81,200000.0,71174.37722419928,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 15:00:00,45.0,0.0,240000.0,90566.03773584907,0.0,0.0,240000.0,,,,,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,549000.0,2.65,240000.0,90566.03773584907,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 16:00:00,-10.0,350000.0,0.0,146935.34844668346,0.0,350000.0,0.0,,,,,3.0,4.0,447000.0,2.382,350000.0,146935.34844668346,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,0.5,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 17:00:00,-5.0,300000.0,0.0,118585.4450483518,0.0,300000.0,0.0,,,,,3.0,4.0,479035.71428571426,2.5298214285714287,300000.0,118585.4450483518,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.0,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 18:00:00,0.0,250000.0,0.0,90187.59018759019,0.0,250000.0,0.0,,,,,3.0,4.0,530760.0,2.772,250000.0,90187.59018759019,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 19:00:00,5.0,200000.0,0.0,63355.58321077045,0.0,200000.0,0.0,,,,,3.0,4.0,612010.7142857143,3.1567857142857143,200000.0,63355.58321077045,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 20:00:00,10.0,150000.0,0.0,41322.31404958678,0.0,150000.0,0.0,,,,,3.0,4.0,707100.0,3.63,150000.0,41322.31404958678,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 21:00:00,15.0,100000.0,0.0,25906.73575129534,0.0,100000.0,0.0,,,,,3.0,4.0,729300.0,3.86,100000.0,25906.73575129534,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,625000.0,4.4,0.0,0.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 22:00:00,20.0,50000.0,40000.0,21930.75741462838,0.0,50000.0,40000.0,,,,,3.0,4.0,772500.0,4.03,50000.0,12406.947890818858,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,587500.0,4.2,40000.0,9523.809523809523,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  2025-01-01 23:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,,,,,3.0,4.0,798450.0,4.125,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,660000.0,4.0,80000.0,20000.0,,,,eq_scenario_4,100% AWHP (H+C)+Elec Backup
  
  '''
# ---
# name: test_scenario_output_snapshot[eq_scenario_5]
  '''
  timestamp,t_out_C,heating_W,cooling_W,elec_Wh,gas_Wh,hhw_W,chw_W,hr_hhw_W,hr_chw_W,hr_cop_h,max_cap_h_hr_W,min_cap_h_hr_W,simult_h_hr_W,elec_hr_Wh,hr_wwhp_refrigerant,hr_wwhp_refrigerant_weight_kg,hr_wwhp_refrigerant_gwp_kgCO2e_per_kgRefrig,awhp_num,awhp_num_redundant,awhp_cap_h_W,awhp_cop_h,awhp_hhw_W,elec_awhp_h_Wh,awhp_refrigerant,total_awhp_refrigerant_weight_kg,total_awhp_refrigerant_gwp_kgCO2e_per_kgRefrig,boiler_num,boiler_eff,boiler_hhw_W,boiler_hhw_W_ng_mode,boiler_eq_calc_type,boiler_cap_W,gas_boiler_Wh,gas_boiler_Wh_ng_mode,fuel_switching,res_hhw_W,elec_res_Wh,awhp_num_c,awhp_cap_c_W,awhp_cop_c,awhp_chw_W,elec_awhp_c_Wh,chiller_cop,chiller_chw_W,elec_chiller_Wh,eq_scen_id,eq_scen_name
  2025-01-01 00:00:00,-20.0,450000.0,0.0,450000.0,0.0,450000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,0.0,2.15,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,450000.0,450000.0,3.0,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 01:00:00,-15.0,400000.0,0.0,201665.11627906977,0.0,400000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,370800.0,2.15,370800.0,172465.11627906977,R-454B,9.0,4194.0,,,,,,,,,False,29200.0,29200.0,0.0,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 02:00:00,-10.0,350000.0,0.0,146935.34844668346,0.0,350000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,447000.0,2.382,350000.0,146935.34844668346,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,0.5,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 03:00:00,-5.0,300000.0,0.0,118585.4450483518,0.0,300000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,479035.71428571426,2.5298214285714287,300000.0,118585.4450483518,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.0,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 04:00:00,0.0,250000.0,0.0,90187.59018759019,0.0,250000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,530760.0,2.772,250000.0,90187.59018759019,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 05:00:00,4.4,206000.0,0.0,66451.6129032258,0.0,206000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,600600.0,3.1,206000.0,66451.6129032258,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 06:00:00,10.0,150000.0,0.0,41322.31404958678,0.0,150000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,707100.0,3.63,150000.0,41322.31404958678,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 07:00:00,15.0,100000.0,0.0,25906.73575129534,0.0,100000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,729300.0,3.86,100000.0,25906.73575129534,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,625000.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 08:00:00,20.0,50000.0,40000.0,21930.75741462838,0.0,50000.0,40000.0,0.0,0.0,4.2,211000.0,70000.0,50000.0,0.0,R-454B,1.875,873.75,3.0,4.0,772500.0,4.03,50000.0,12406.947890818858,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,587500.0,4.2,40000.0,9523.809523809523,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 09:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,798450.0,4.125,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,660000.0,4.0,80000.0,20000.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 10:00:00,28.0,0.0,104000.0,28176.645895421298,0.0,0.0,104000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,814020.0,4.1819999999999995,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,643080.0,3.691,104000.0,28176.645895421298,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 11:00:00,30.0,0.0,120000.0,34433.28550932568,0.0,0.0,120000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,824400.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,631800.0,3.4850000000000003,120000.0,34433.28550932568,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 12:00:00,35.0,0.0,160000.0,53872.05387205387,0.0,0.0,160000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,824400.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,603600.0,2.97,160000.0,53872.05387205387,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 13:00:00,36.0,0.0,168000.0,57181.756296800544,0.0,0.0,168000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,598140.0,2.938,168000.0,57181.756296800544,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 14:00:00,40.0,0.0,200000.0,71174.37722419928,0.0,0.0,200000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,576300.0,2.81,200000.0,71174.37722419928,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 15:00:00,45.0,0.0,240000.0,90566.03773584907,0.0,0.0,240000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,0.0,4.22,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,549000.0,2.65,240000.0,90566.03773584907,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 16:00:00,-10.0,350000.0,0.0,146935.34844668346,0.0,350000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,447000.0,2.382,350000.0,146935.34844668346,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,0.5,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 17:00:00,-5.0,300000.0,0.0,118585.4450483518,0.0,300000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,479035.71428571426,2.5298214285714287,300000.0,118585.4450483518,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.0,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 18:00:00,0.0,250000.0,0.0,90187.59018759019,0.0,250000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,530760.0,2.772,250000.0,90187.59018759019,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,1.5,0.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 19:00:00,5.0,200000.0,0.0,63355.58321077045,0.0,200000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,612010.7142857143,3.1567857142857143,200000.0,63355.58321077045,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 20:00:00,10.0,150000.0,0.0,41322.31404958678,0.0,150000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,707100.0,3.63,150000.0,41322.31404958678,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.0,500000.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 21:00:00,15.0,100000.0,0.0,25906.73575129534,0.0,100000.0,0.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,729300.0,3.86,100000.0,25906.73575129534,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,625000.0,4.4,0.0,0.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 22:00:00,20.0,50000.0,40000.0,21930.75741462838,0.0,50000.0,40000.0,0.0,0.0,4.2,211000.0,70000.0,50000.0,0.0,R-454B,1.875,873.75,3.0,4.0,772500.0,4.03,50000.0,12406.947890818858,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,2.5,587500.0,4.2,40000.0,9523.809523809523,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  2025-01-01 23:00:00,25.0,0.0,80000.0,20000.0,0.0,0.0,80000.0,0.0,0.0,4.2,211000.0,70000.0,0.0,0.0,R-454B,1.875,873.75,3.0,4.0,798450.0,4.125,0.0,0.0,R-454B,9.0,4194.0,,,,,,,,,False,0.0,0.0,3.0,660000.0,4.0,80000.0,20000.0,,,,eq_scenario_5,HR WWHP+100% AWHP (H+C)+Elec Backup
  
  '''
# ---
